# terraria3d-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
res/shaders/: aim-frag.glsl  aim-vert.glsl  block-frag.glsl  block-vert.glsl
src/: game.rs  main.rs  window.rs
src/game/: player.rs  storage.rs  world.rs
src/game/player/: inventory.rs
src/game/world/: chunk.rs
src/render/: aim.rs  block.rs  mesh.rs  mod.rs
