[package]
name = "terraria3d-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
gl = "0.14.0"
nalgebra-glm = "0.18.0"

# genration
noise = "0.8.2"

# for texture atlas
lodepng = "3.8"
rgb = "0.8.36"

# Unabling singleton
once_cell = "1.18.0"

# Unsafe, but safe, multithreading support
parking_lot = "0.12.1"

[profile.dev]
opt-level = 1
